Oxygen (SR2 RC3) JDT Patch for Groovy-Eclipse: JDT commit a38af07